Fixed bug where line feeds wasn't properly rendered in source view on IE.

--- a/js/tinymce/skins/lightgray/TextBox.less
+++ b/js/tinymce/skins/lightgray/TextBox.less
@@ -10,7 +10,7 @@
 	height: 28px;
 	resize: none;
 	padding: 0 4px 0 4px;
-	white-space: normal;
+	white-space: pre-wrap;
 	color: @black;
 }
 
